--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
@@ -37,7 +37,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="pages\detailed-view.html" />
     <Content Include="pages\new-task-creator-page.html" />
+    <Content Include="styles\creator-page-styles.css" />
     <Content Include="styles\styles.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
