Laboratorium 3: praca domowa: Dodanie funkcjonalności dodawania nowego zadania w oknie kreatora

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
@@ -36,6 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="scripts\creatorScript.js" />
     <Content Include="index.html" />
     <Content Include="pages\detailed-view.html" />
     <Content Include="pages\new-task-creator-page.html" />
