--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom.csproj
@@ -40,6 +40,7 @@
     <Content Include="index.html" />
     <Content Include="pages\detailed-view.html" />
     <Content Include="pages\new-task-creator-page.html" />
+    <Content Include="scripts\detailedViewScript.js" />
     <Content Include="scripts\mainPageScripts.js" />
     <Content Include="styles\creator-page-styles.css" />
     <Content Include="styles\detailed-view-styles.css" />
