Laboratorium 5: praca domowa: Dodanie modelu bazy danych i połączenia z bazą danych

--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/appsettings.json
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/appsettings.json
@@ -7,4 +7,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "RailwaySystemDBContext": "Server=DESKTOP-953DOTG\\PAWELSQL;Database=RailwaySystem;Trusted_Connection=True"
+  }
 }
