Laboratorium 5: praca domowa: Dodanie modelu pasażera

--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/appsettings.json
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "RailwaySystemDBContext": "Server=DESKTOP-953DOTG\\PAWELSQL;Database=RailwaySystem;Trusted_Connection=True"
   }
