Lab6: pracdom: Dodanie połączenia z bazą danych i relacji między klasą Student a klasą Lesson

--- a/laboratorium 6/praca domowa/PawełGryglewiczLab6PracDom/PawełGryglewiczLab6PracDom/appsettings.json
+++ b/laboratorium 6/praca domowa/PawełGryglewiczLab6PracDom/PawełGryglewiczLab6PracDom/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UniversityLessonSystem": "Server=DESKTOP-953DOTG\\PAWELSQL;Database=UniversityLessonSystem;Trusted_Connection=True"
+  }
 }
