--- a/laboratorium 9/praca domowa/PawełGryglewiczLab9PracDom/PawełGryglewiczLab9PracDom.UnitTests/PawełGryglewiczLab9PracDom.UnitTests.csproj
+++ b/laboratorium 9/praca domowa/PawełGryglewiczLab9PracDom/PawełGryglewiczLab9PracDom.UnitTests/PawełGryglewiczLab9PracDom.UnitTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PawełGryglewiczLab9PracDom\PawełGryglewiczLab9PracDom.csproj" />
+  </ItemGroup>
+
 </Project>
